2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorOptions.cs: Implemented bracket
	  matching.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/EditActions.cs: Bug 354129 - Auto add second
	  brackets, quotation mark

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented Bug 323946 -
	  Undo/Redo functionality are not context sensitive.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed reload bug.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Filtered out body less
	  methods in folding (abstract methods,  methods declared in interfaces).

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Comment/Uncomment and
	  Indent/Unindent commands should now work as expected.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Implemented ISplittable.

2008-02-02  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed code completion bug.

2008-02-02  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added some safety checks.

2008-02-02  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Added bounds check for
	  error underlining.

2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed insert/delete text
	  caret offsets.

2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.SourceEditor.mdp: Added makefile.

2008-02-01  Mike Krüger <mkrueger@novell.com> 
